
    How to make it robust on collisions?

    Idea: client rolls a new salt if it gets no response within 1 second?

    This will give it another slot, so if somebody else is using that slot, client is unblocked.

    This is a really smart approach, and easy to test. Keep it simple!

    Done! Sold. Easy.


Thursday May 12th, 2016
=======================

    Seems like we have settled on a solution.

    1. Client connects to matchmaker over HTTPS, requests to be matched.

    2. Server and all dedis share a private key. Dedis must be hosted outside of player control, eg. data center.

    3. Matchmaker returns encrypted block of data with HMAC as signature using that private key to client.

    4. Client passes in this block of data and HMAC in the connection request packet.

    5. Server tests all connection request packets to see if valid via HMAC. If not valid, ignore and no response.

    6. If valid, test the hash of that data vs. previously sent blocks and if a block with the same hash has already been consumed, ignore the connection request and no response.

    7. Otherwise, send a challenge packet and assign a client slot to that particular connecting client (pending successful challenge response to avoid IP return address spoofing)

    8. Block of data must contain either the specific dedi ip or a whitelist of dedi IPs, to avoid attack where client takes the same block, runs a botnet and goes wide throwing connection requests with that block to every dedi in your data center (once)

    9. Block of data must also contain an expiry timestamp, this is useful because this timestamp can be used to expire old block entries in the blacklist.

    10. The block can also contain a randomly generated key for symmetric encryption so client and server can communicate securly.

    11. The matcher must also communicate the list of server IPs to try, and the key for communication with each dedi to the client.