@@ -20,6 +20,18 @@ Friday May 13th, 2016
 
     Done! Sold. Easy.
 
+    Now I really need to get a network interface going, some way to send and receive packets.
+
+    In my previous implementation the actual serialization of the messages was performed later,
+    eg. they were added to a queue.
+
+    How about implementing a network interface implementation inside the example program first,
+    and then seeing how it can be generalized into the library? (this is a good general pattern...)
+
+    How about just getting the basic BSD sockets implementation into the network2.h?
+
+    Halfway through this.
+
 
 Thursday May 12th, 2016
 =======================
